--- a/snippets/editor/callouts/callout-poem.css
+++ b/snippets/editor/callouts/callout-poem.css
@@ -116,6 +116,7 @@ body {
   -webkit-mask-image: var(--left-ornament-flourish), linear-gradient(to left, transparent, black 40%);
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% auto;
+  -webkit-mask-composite: source-in;
   mask-composite: intersect;
   z-index: -1;
 }
