--- a/scss/editor/callouts/_callout-clue.scss
+++ b/scss/editor/callouts/_callout-clue.scss
@@ -1,20 +1,44 @@
 // Tape variants
-.callout[data-callout="clue"][data-callout-metadata~="tape-a"] { --clue-tape-variant: var(--clue-tape-a); }
-.callout[data-callout="clue"][data-callout-metadata~="tape-b"] { --clue-tape-variant: var(--clue-tape-b); }
-.callout[data-callout="clue"][data-callout-metadata~="tape-c"] { --clue-tape-variant: var(--clue-tape-c); }
-.callout[data-callout="clue"][data-callout-metadata~="tape-d"] { --clue-tape-variant: var(--clue-tape-d); }
+.callout[data-callout="clue"][data-callout-metadata~="tape-a"] {
+    --clue-tape-variant: var(--clue-tape-a);
+}
+.callout[data-callout="clue"][data-callout-metadata~="tape-b"] {
+    --clue-tape-variant: var(--clue-tape-b);
+}
+.callout[data-callout="clue"][data-callout-metadata~="tape-c"] {
+    --clue-tape-variant: var(--clue-tape-c);
+}
+.callout[data-callout="clue"][data-callout-metadata~="tape-d"] {
+    --clue-tape-variant: var(--clue-tape-d);
+}
 
 // Paper variants
-.callout[data-callout="clue"][data-callout-metadata~="paper-a"] { --clue-paper-variant: var(--clue-paper-a); }
-.callout[data-callout="clue"][data-callout-metadata~="paper-b"] { --clue-paper-variant: var(--clue-paper-b); }
-.callout[data-callout="clue"][data-callout-metadata~="paper-c"] { --clue-paper-variant: var(--clue-paper-c); }
-.callout[data-callout="clue"][data-callout-metadata~="paper-d"] { --clue-paper-variant: var(--clue-paper-d); }
+.callout[data-callout="clue"][data-callout-metadata~="paper-a"] {
+    --clue-paper-variant: var(--clue-paper-a);
+}
+.callout[data-callout="clue"][data-callout-metadata~="paper-b"] {
+    --clue-paper-variant: var(--clue-paper-b);
+}
+.callout[data-callout="clue"][data-callout-metadata~="paper-c"] {
+    --clue-paper-variant: var(--clue-paper-c);
+}
+.callout[data-callout="clue"][data-callout-metadata~="paper-d"] {
+    --clue-paper-variant: var(--clue-paper-d);
+}
 
 // Ripped mask variants
-.callout[data-callout="clue"][data-callout-metadata~="ripped-a"] { --clue-ripped-variant: var(--clue-ripped-a); }
-.callout[data-callout="clue"][data-callout-metadata~="ripped-b"] { --clue-ripped-variant: var(--clue-ripped-b); }
-.callout[data-callout="clue"][data-callout-metadata~="ripped-c"] { --clue-ripped-variant: var(--clue-ripped-c); }
-.callout[data-callout="clue"][data-callout-metadata~="ripped-d"] { --clue-ripped-variant: var(--clue-ripped-d); }
+.callout[data-callout="clue"][data-callout-metadata~="ripped-a"] {
+    --clue-ripped-variant: var(--clue-ripped-a);
+}
+.callout[data-callout="clue"][data-callout-metadata~="ripped-b"] {
+    --clue-ripped-variant: var(--clue-ripped-b);
+}
+.callout[data-callout="clue"][data-callout-metadata~="ripped-c"] {
+    --clue-ripped-variant: var(--clue-ripped-c);
+}
+.callout[data-callout="clue"][data-callout-metadata~="ripped-d"] {
+    --clue-ripped-variant: var(--clue-ripped-d);
+}
 
 .callout[data-callout="clue"] {
     --callout-color: 0, 0, 0; // Border and text color
@@ -61,9 +85,13 @@
             background-position: center center;
         }
 
-        .callout-icon, .callout-title-inner, .callout-fold { z-index: 1; }
+        .callout-icon,
+        .callout-title-inner,
+        .callout-fold {
+            z-index: 1;
+        }
     }
-    
+
     > .callout-content {
         padding: var(--callout-padding);
         color: rgb(var(--callout-color));
@@ -78,17 +106,24 @@
         background: none;
         padding-bottom: calc(var(--callout-header-height) / 2);
 
-        > * > .callout-icon {  opacity: 0.5; }
+        > * > .callout-icon {
+            opacity: 0.5;
+        }
     }
-    > .callout-title:hover .callout-icon { opacity: 1; }
+    > .callout-title:hover .callout-icon {
+        opacity: 1;
+    }
 }
 
 .callout[data-callout="clue"][data-callout-metadata*="ripped"] {
     .callout-content {
         -webkit-mask-image: var(--clue-ripped-variant), linear-gradient(to bottom, black, black);
         -webkit-mask-size: 101% auto;
-        -webkit-mask-position: center calc(100% + 1px), center;
+        -webkit-mask-position:
+            center calc(100% + 1px),
+            center;
         -webkit-mask-repeat: no-repeat;
+        -webkit-mask-composite: xor;
         mask-composite: exclude;
         padding-bottom: 15px;
     }
@@ -98,10 +133,60 @@
     .callout[data-callout="clue"][data-callout-metadata~="torn"] {
         .callout-content {
             clip-path: polygon(
-                0% 0, 2% 2px, 12% 0, 13% 2px, 14% 0, 16% 2px, 29% 0, 32% 2px, 32% 0, 35% 2px, 53% 0, 54% 2px, 54% 0, 62% 2px, 64% 0, 72% 2px, 84% 0, 86% 2px, 94% 0, 99% 2px, 100% 0,
-                100% 5%, calc(100% - 2px) 9%, 100% 28%, calc(100% - 2px) 38%, 100% 61%, 100% 100%,
-                99% 100%, 96% calc(100% - 2px), 95% 100%, 81% calc(100% - 2px), 80% 100%, 79% calc(100% - 2px), 66% 100%, 59% calc(100% - 2px), 56% 100%, 45% calc(100% - 2px), 45% 100%, 44% calc(100% - 2px), 42% 100%, 34% calc(100% - 2px), 33% 100%, 24% calc(100% - 2px), 21% 100%, 16% calc(100% - 2px), 15% 100%, 10% calc(100% - 2px), 0 100%,
-                0 75%, 2px 44%, 0 39%, 2px 19%, 0 18%, 0 0
+                0% 0,
+                2% 2px,
+                12% 0,
+                13% 2px,
+                14% 0,
+                16% 2px,
+                29% 0,
+                32% 2px,
+                32% 0,
+                35% 2px,
+                53% 0,
+                54% 2px,
+                54% 0,
+                62% 2px,
+                64% 0,
+                72% 2px,
+                84% 0,
+                86% 2px,
+                94% 0,
+                99% 2px,
+                100% 0,
+                100% 5%,
+                calc(100% - 2px) 9%,
+                100% 28%,
+                calc(100% - 2px) 38%,
+                100% 61%,
+                100% 100%,
+                99% 100%,
+                96% calc(100% - 2px),
+                95% 100%,
+                81% calc(100% - 2px),
+                80% 100%,
+                79% calc(100% - 2px),
+                66% 100%,
+                59% calc(100% - 2px),
+                56% 100%,
+                45% calc(100% - 2px),
+                45% 100%,
+                44% calc(100% - 2px),
+                42% 100%,
+                34% calc(100% - 2px),
+                33% 100%,
+                24% calc(100% - 2px),
+                21% 100%,
+                16% calc(100% - 2px),
+                15% 100%,
+                10% calc(100% - 2px),
+                0 100%,
+                0 75%,
+                2px 44%,
+                0 39%,
+                2px 19%,
+                0 18%,
+                0 0
             );
         }
     }
@@ -111,17 +196,54 @@
     .callout[data-callout="clue"][data-callout-metadata~="torn"] {
         .callout-content {
             clip-path: polygon(
-                5% 0, 7% 2px, 9% 0, 16% 2px, 36% 0, 60% 2px, 81% 0, 91% 2px, 94% 0, 96% 2px, 100% 0,
-                100% 3%, calc(100% - 2px) 21%, 100% 35%, calc(100% - 2px) 38%, 100% 38%, calc(100% - 2px) 41%, 100% 59%, calc(100% - 2px) 80%, 100% 92%, calc(100% - 2px) 98%, 100% 100%,
-                85% 100%, 80% calc(100% - 2px), 76% 100%, 72% calc(100% - 2px), 65% 100%, 61% calc(100% - 2px), 54% 100%, 34% calc(100% - 2px), 15% 100%, 1% calc(100% - 2px), 0 100%,
-                0 65%, 2px 62%, 0 62%, 2px 54%, 0 43%, 2px 36%, 0 28%, 2px 24%, 0 11%, 2px 8%, 0 0
+                5% 0,
+                7% 2px,
+                9% 0,
+                16% 2px,
+                36% 0,
+                60% 2px,
+                81% 0,
+                91% 2px,
+                94% 0,
+                96% 2px,
+                100% 0,
+                100% 3%,
+                calc(100% - 2px) 21%,
+                100% 35%,
+                calc(100% - 2px) 38%,
+                100% 38%,
+                calc(100% - 2px) 41%,
+                100% 59%,
+                calc(100% - 2px) 80%,
+                100% 92%,
+                calc(100% - 2px) 98%,
+                100% 100%,
+                85% 100%,
+                80% calc(100% - 2px),
+                76% 100%,
+                72% calc(100% - 2px),
+                65% 100%,
+                61% calc(100% - 2px),
+                54% 100%,
+                34% calc(100% - 2px),
+                15% 100%,
+                1% calc(100% - 2px),
+                0 100%,
+                0 65%,
+                2px 62%,
+                0 62%,
+                2px 54%,
+                0 43%,
+                2px 36%,
+                0 28%,
+                2px 24%,
+                0 11%,
+                2px 8%,
+                0 0
             );
         }
     }
 }
-
-
-
 
 body {
     /* https://www.freeject.net/2020/06/free-download-8-paper-tape-transparent.html */
