--- a/scss/editor/callouts/_callout-film-strip.scss
+++ b/scss/editor/callouts/_callout-film-strip.scss
@@ -4,14 +4,14 @@
     --callout-content-padding: 0;
     --callout-color: var(--mono-rgb-100);
     --image-shadow-offset: 0;
-    
+
     --frame-height: 140px; // height of the picture
-    --n-holes: 8;          // number of holes, used to compute the width of the image
-    --hole-width: 15px;    // width of each hole, used to compute the width of the image
-    --hole-height: 10px;   // height of each hole
-    --gap: 5px;            // gap between each holes
-    --img-fading: 2px;     // bluring the edges of the images. Set to 0 for sharp edges
-    --hole-fading: 1px;    // bluring the edges of the holes. Set to 0 for sharp edges
+    --n-holes: 8; // number of holes, used to compute the width of the image
+    --hole-width: 15px; // width of each hole, used to compute the width of the image
+    --hole-height: 10px; // height of each hole
+    --gap: 5px; // gap between each holes
+    --img-fading: 2px; // bluring the edges of the images. Set to 0 for sharp edges
+    --hole-fading: 1px; // bluring the edges of the holes. Set to 0 for sharp edges
 
     // computed values
     --frame-width: calc(var(--n-holes) * var(--hole-width) + (var(--n-holes) - 1) * var(--gap));
@@ -20,7 +20,6 @@
 
     background: none;
 
-    
     .callout-content > p {
         counter-reset: frames;
         display: flex;
@@ -60,11 +59,21 @@
                 black calc(2 * var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5),
                 black calc(var(--padding-y) + var(--frame-height) + var(--gap) - var(--hole-fading) * 0.5),
                 transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-fading) * 0.5),
-                transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) - var(--hole-fading) * 0.5),
-                black calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5),
+                transparent
+                    calc(
+                        var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) - var(--hole-fading) *
+                            0.5
+                    ),
+                black
+                    calc(
+                        var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) + var(--hole-fading) *
+                            0.5
+                    ),
                 black 100%
             );
-        -webkit-mask-size: calc(var(--hole-width) + var(--gap)) 100%, 100%;
+        -webkit-mask-size:
+            calc(var(--hole-width) + var(--gap)) 100%,
+            100%;
         -webkit-mask-position: left, center;
         -webkit-mask-repeat: repeat-x, no-repeat;
     }
@@ -76,22 +85,23 @@
         filter: sepia(0.5);
 
         -webkit-mask-image: linear-gradient(
-            to right,
-            transparent 0px,
-            black var(--img-fading),
-            black calc(100% - var(--img-fading)),
-            transparent 100%
-        ),
-        linear-gradient(
-            to bottom,
-            transparent 0px,
-            black var(--img-fading),
-            black calc(100% - var(--img-fading)),
-            transparent 100%
-        );
+                to right,
+                transparent 0px,
+                black var(--img-fading),
+                black calc(100% - var(--img-fading)),
+                transparent 100%
+            ),
+            linear-gradient(
+                to bottom,
+                transparent 0px,
+                black var(--img-fading),
+                black calc(100% - var(--img-fading)),
+                transparent 100%
+            );
         -webkit-mask-size: 100%;
         -webkit-mask-position: center;
         mask-composite: intersect;
+        -webkit-mask-composite: source-in;
     }
 
     .callout-content > p > span::after {
@@ -113,6 +123,4 @@
     .callout-content > p > span:last-of-type::after {
         content: "← " counter(frames);
     }
-
 }
-
