--- a/snippets/editor/callouts/callout-clue.css
+++ b/snippets/editor/callouts/callout-clue.css
@@ -93,7 +93,9 @@ Author: ElsaTam (Kapirklaa in Discord)
   background-size: 100% 100%;
   background-position: center center;
 }
-.callout[data-callout=clue] > .callout-title .callout-icon, .callout[data-callout=clue] > .callout-title .callout-title-inner, .callout[data-callout=clue] > .callout-title .callout-fold {
+.callout[data-callout=clue] > .callout-title .callout-icon,
+.callout[data-callout=clue] > .callout-title .callout-title-inner,
+.callout[data-callout=clue] > .callout-title .callout-fold {
   z-index: 1;
 }
 .callout[data-callout=clue] > .callout-content {
@@ -121,6 +123,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   -webkit-mask-size: 101% auto;
   -webkit-mask-position: center calc(100% + 1px), center;
   -webkit-mask-repeat: no-repeat;
+  -webkit-mask-composite: xor;
   mask-composite: exclude;
   padding-bottom: 15px;
 }
