--- a/snippets/window/sidebar-layout.css
+++ b/snippets/window/sidebar-layout.css
@@ -69,6 +69,7 @@ body {
 
 body:not(.is-ios) .workspace-drawer:is(.mod-left, .mod-right) {
   padding-inline: var(--cutout-outline-inset);
+  -webkit-mask-composite: source-in;
   mask-composite: intersect;
 }
 
